# xsens_bridge

./: CMakeLists.txt  package.xml
lib/: Makefile
msg/: Imu.msg
src/: xsens_bridge.cpp  xsens_node.cpp
